Atualização de arquivos

--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 <!-- Capítulo 1 -->
                 <div class="chapter-card" data-chapter="1">
                     <div class="chapter-thumbnail">
-                        <img src="public/images/capitulo1/1.jpg" alt="Capítulo 1 - Capa" loading="lazy">
+                        <img src="public/images/capitulo1/Pagina 1.jpg" alt="Capítulo 1 - Capa" loading="lazy">
                         <div class="chapter-overlay">
                             <div class="chapter-info">
                                 <h3>Capítulo 1</h3>
                                 <p>O Renascimento de Masuke</p>
                                 <div class="chapter-stats">
-                                    <span><i class="fas fa-images"></i> 20 páginas</span>
+                                    <span><i class="fas fa-images"></i> 20 Paginas</span>
                                     <span><i class="fas fa-clock"></i> ~15 min</span>
                                 </div>
                             </div>
@@ -145,13 +145,13 @@
                 <!-- Capítulo 2 -->
                 <div class="chapter-card" data-chapter="2">
                     <div class="chapter-thumbnail">
-                        <img src="https://raw.githubusercontent.com/MASUKEMDAL/MDAL-Capitulo-1/refs/heads/main/pagina%2010.jpg" alt="Capítulo 2 - Capa" loading="lazy">
+                        <img src="https://raw.githubusercontent.com/MASUKEMDAL/MDAL-Capitulo-1/refs/heads/main/Pagina%2010.jpg" alt="Capítulo 2 - Capa" loading="lazy">
                         <div class="chapter-overlay">
                             <div class="chapter-info">
                                 <h3>Capítulo 2</h3>
                                 <p>Masuke VS Drakom</p>
                                 <div class="chapter-stats">
-                                    <span><i class="fas fa-images"></i> 15 páginas</span>
+                                    <span><i class="fas fa-images"></i> 15 Paginas</span>
                                     <span><i class="fas fa-clock"></i> ~12 min</span>
                                 </div>
                             </div>
@@ -335,7 +335,7 @@
             <div class="characters-grid">
                 <div class="character-card main-character">
                     <div class="character-image">
-                        <img src="https://raw.githubusercontent.com/MASUKEMDAL/capitu-1/refs/heads/main/Masuke%20Desing.jpg" alt="Masuke" loading="lazy">
+                        <img src="public/images/Masuke.jpg" alt="Masuke" loading="lazy">
                         <div class="character-aura masuke-aura"></div>
                     </div>
                     <div class="character-info">
