Adicionar download PDF para Novel Capítulo 1

--- a/index.html
+++ b/index.html
@@ -232,10 +232,15 @@
                 <div class="novel-chapter">
                     <div class="chapter-header" onclick="toggleNovelChapter('novel-chapter-1')">
                         <div class="chapter-title">
-                            <h3>Capítulo 1: O Renascimento de Masuke</h3>
+                            <h3>Capítulo 1: O Príncipe das Trevas</h3>
                             <span class="chapter-status">Disponível</span>
                         </div>
-                        <i class="fas fa-chevron-down"></i>
+                        <div class="chapter-actions">
+                            <button class="download-btn" onclick="downloadPDF()" title="Baixar PDF">
+                                <i class="fas fa-download"></i>
+                            </button>
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
                     </div>
                     <div class="chapter-content" id="novel-chapter-1">
                         <div class="chapter-text">
@@ -283,7 +288,67 @@
                                 <p>— A resposta está correta.</p>
                             </div>
 
-                            <p class="chapter-end">Continua...</p>
+                            <h4>O Despertar do Poder</h4>
+                            <p>Naquela tarde, durante o treino de combate, algo mudou. Masuke estava sendo provocado novamente por um grupo de estudantes quando um deles foi longe demais.</p>
+
+                            <div class="dialogue">
+                                <p>— Seu pai deve ter vergonha de ter um filho tão fraco! — gritou o valentão.</p>
+                            </div>
+
+                            <p>Foi então que aconteceu. Os olhos de Masuke brilharam com uma luz sinistra, e uma aura escura começou a emanar de seu corpo. O ar ao redor ficou pesado, e todos sentiram um frio na espinha.</p>
+
+                            <div class="dialogue">
+                                <p>— <strong>Masuren...</strong> — murmurou Masuke, e raios de energia elétrica sombria começaram a dançar ao redor de seus punhos.</p>
+                            </div>
+
+                            <p>O valentão recuou, assustado. Nunca havia visto nada parecido. A energia que emanava de Masuke era diferente de tudo que conheciam — era pura, concentrada, e aterrorizante.</p>
+
+                            <h4>A Revelação de Moshu</h4>
+                            <p>Após o incidente, Moshu chamou Masuke para uma conversa particular.</p>
+
+                            <div class="dialogue">
+                                <p>— Você sabe o que acabou de fazer? — perguntou o professor, seus olhos mecânicos brilhando.</p>
+                                <p>— Não sei... só senti raiva e...</p>
+                                <p>— Você manifestou o <strong>Masuren</strong>, uma técnica que poucos conseguem dominar. É a fusão perfeita entre a energia das trevas e a força espiritual.</p>
+                            </div>
+
+                            <p>Moshu explicou que Masuke possuía um potencial único, herdado de sua linhagem mista. Ele não era apenas um estudante comum — era o herdeiro de dois mundos.</p>
+
+                            <h4>O Nascimento da MDAL</h4>
+                            <p>Nos meses seguintes, Masuke começou a treinar secretamente com Moshu. Ele aprendeu a controlar o Masuren e descobriu outras habilidades dormentes em seu interior.</p>
+
+                            <p>Foi durante esse período que ele conheceu outros estudantes que, como ele, não se encaixavam nos padrões da Academia:</p>
+
+                            <p><strong>Drakom</strong> — Um jovem com sangue de dragão, capaz de invocar criaturas flamejantes e se teletransportar usando sua técnica "Making".</p>
+
+                            <p><strong>Shizuke</strong> — Ex-membro da Sociedade Fênix, mestre no controle das águas e portador do tridente de Poseidon.</p>
+
+                            <p><strong>Hiroshi</strong> — Conhecido como o "Tolo Forte", especialista em técnicas de terra e defesa impenetrável.</p>
+
+                            <p>Juntos, eles formaram uma organização secreta que mudaria o destino do mundo espiritual: <strong>MDAL — Masuke Death A Lenda</strong>.</p>
+
+                            <h4>O Primeiro Confronto</h4>
+                            <p>A primeira missão da MDAL foi enfrentar um grupo de espíritos renegados que aterrorizavam uma vila próxima. Era a chance de Masuke provar seu valor.</p>
+
+                            <p>Durante a batalha, ele revelou uma nova habilidade: os <strong>Death Eyes</strong>. Seus olhos se tornaram completamente negros, e ele pôde invocar <strong>Mr. Morte</strong>, um ceifador sombrio que obedecia apenas a ele.</p>
+
+                            <div class="dialogue">
+                                <p>— Impossível... — sussurrou um dos inimigos antes de ser derrotado. — Você é realmente o filho de Darkare!</p>
+                            </div>
+
+                            <p>A vitória foi esmagadora, e a reputação da MDAL começou a se espalhar pelo mundo espiritual.</p>
+
+                            <h4>O Legado Continua</h4>
+                            <p>Masuke sabia que aquela era apenas o começo. Sua jornada para se tornar uma lenda estava apenas começando, e os desafios que o aguardavam seriam ainda maiores.</p>
+
+                            <p>Com a MDAL ao seu lado e o poder das trevas correndo em suas veias, ele estava pronto para enfrentar qualquer inimigo que ousasse desafiá-lo.</p>
+
+                            <blockquote class="chapter-quote">
+                                "Na escuridão, só os que controlam a própria sombra conseguem guiar a luz."
+                                <cite>— Masuke</cite>
+                            </blockquote>
+
+                            <p class="chapter-end">Continua no próximo capítulo...</p>
                         </div>
                     </div>
                 </div>
@@ -553,3 +618,5 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/reader.js"></script>
     <script src="scripts/animations.js"></script>
+</body>
+</html>
