atualização de pdf e imagens

--- a/index.html
+++ b/index.html
@@ -416,64 +416,82 @@
                 </div>
 
                 <div class="character-card">
-                    <div class="character-image">
-                        <div class="character-placeholder dragon-theme">
-                            <i class="fas fa-dragon"></i>
-                        </div>
-                        <div class="character-aura drakom-aura"></div>
-                    </div>
-                    <div class="character-info">
-                        <h3>Drakom</h3>
-                        <span class="character-title">Domador de Dragões</span>
-                        <p>Príncipe dos dragões que se juntou à MDAL. Mestre em invocações dracônicas e teletransporte.</p>
-                        <div class="character-abilities">
-                            <span class="ability-tag">Draison</span>
-                            <span class="ability-tag">Making</span>
-                            <span class="ability-tag">Invocação de Dragões</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="character-card">
-                    <div class="character-image">
-                        <div class="character-placeholder water-theme">
-                            <i class="fas fa-water"></i>
-                        </div>
-                        <div class="character-aura shizuke-aura"></div>
-                    </div>
-                    <div class="character-info">
-                        <h3>Shizuke</h3>
-                        <span class="character-title">Tridente da Água</span>
-                        <p>Controlador das águas que carrega o tridente de Poseidon. Ex-membro da Sociedade Fênix.</p>
-                        <div class="character-abilities">
-                            <span class="ability-tag">Fênix de Água</span>
-                            <span class="ability-tag">Shizurem</span>
-                            <span class="ability-tag">Réplica de Água</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="character-card">
-                    <div class="character-image">
-                        <div class="character-placeholder earth-theme">
-                            <i class="fas fa-mountain"></i>
-                        </div>
-                        <div class="character-aura hiroshi-aura"></div>
-                    </div>
-                    <div class="character-info">
-                        <h3>Hiroshi</h3>
-                        <span class="character-title">Dragão da Terra</span>
-                        <p>O "Tolo Forte" da MDAL, mestre em técnicas de terra e defesa impenetrável.</p>
-                        <div class="character-abilities">
-                            <span class="ability-tag">Armadura de Dragão</span>
-                            <span class="ability-tag">Muralha de Terra</span>
-                            <span class="ability-tag">Pisada Sísmica</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="character-image">
+        <div class="character-placeholder dragon-theme">
+            <img src="public/images/Drakom .png" alt="Drakom" class="character-img" loading="lazy">
         </div>
-    </section>
+        <div class="character-aura drakom-aura"></div>
+    </div>
+    <div class="character-info">
+        <h3>Drakom</h3>
+        <span class="character-title">Domador de Dragões</span>
+        <p>Príncipe dos dragões que se juntou à MDAL. Mestre em invocações dracônicas e teletransporte.</p>
+        <div class="character-abilities">
+            <span class="ability-tag">Draison</span>
+            <span class="ability-tag">Making</span>
+            <span class="ability-tag">Invocação de Dragões</span>
+        </div>
+    </div>
+</div>
+
+
+                <div class="character-card">
+    <div class="character-image">
+        <div class="character-placeholder water-theme">
+            <img src="public/images/Shizuke.png" alt="Shizuke" class="character-img" loading="lazy">
+        </div>
+        <div class="character-aura shizuke-aura"></div>
+    </div>
+    <div class="character-info">
+        <h3>Shizuke</h3>
+        <span class="character-title">Tridente da Água</span>
+        <p>Controlador das águas que carrega o tridente de Poseidon. Ex-membro da Sociedade Fênix.</p>
+        <div class="character-abilities">
+            <span class="ability-tag">Fênix de Água</span>
+            <span class="ability-tag">Shizurem</span>
+            <span class="ability-tag">Réplica de Água</span>
+        </div>
+    </div>
+</div>
+
+
+                <div class="character-card">
+    <div class="character-image">
+        <div class="character-placeholder earth-theme">
+            <img src="public/images/hiroshi.png" alt="Hiroshi" class="character-img" loading="lazy">
+        </div>
+        <div class="character-aura hiroshi-aura"></div>
+    </div>
+    <div class="character-info">
+        <h3>Hiroshi</h3>
+        <span class="character-title">Dragão da Terra</span>
+        <p>O "Tolo Forte" da MDAL, mestre em técnicas de terra e defesa impenetrável.</p>
+        <div class="character-abilities">
+            <span class="ability-tag">Armadura de Dragão</span>
+            <span class="ability-tag">Muralha de Terra</span>
+            <span class="ability-tag">Pisada Sísmica</span>
+        </div>
+    </div>
+</div>
+
+<div class="character-card">
+    <div class="character-image">
+        <div class="character-placeholder tech-theme">
+            <img src="public/images/Moshu.jpg" alt="Moshu Misurushi" class="character-img" loading="lazy">
+        </div>
+        <div class="character-aura moshu-aura"></div>
+    </div>
+    <div class="character-info">
+        <h3>Moshu Misurushi</h3>
+        <span class="character-title">Professor Mecânico</span>
+        <p>Um ciborgue lendário da Academia Espiritual Central. Meio homem, meio máquina — mas 100% sabedoria e poder oculto.</p>
+        <div class="character-abilities">
+            <span class="ability-tag">Visão Cibernética</span>
+            <span class="ability-tag">Circuito Mental</span>
+            <span class="ability-tag">Raio de Análise</span>
+        </div>
+    </div>
+</div>
 
     <!-- Glossary Section -->
     <section id="glossary" class="glossary-section">
