Adicionar Capítulo 5 e Estrutura para Novos Capítulos

--- a/index.html
+++ b/index.html
@@ -252,160 +252,214 @@
           </p>
         </div>
 
-        <div class="novel-chapters">
-          <div class="novel-chapter">
-            <div
-              class="chapter-header"
-              onclick="toggleNovelChapter('novel-chapter-1')"
-            >
-              <div class="chapter-title">
-                <h3>Capítulo 1: O Príncipe das Trevas</h3>
-                <span class="chapter-status">Disponível</span>
-              </div>
-              <div class="chapter-actions">
-                <button
-                  class="download-btn"
-                  onclick="downloadPDF(1)"
-                  title="Baixar PDF"
-                >
-                  <i class="fas fa-download"></i>
-                </button>
-                <i class="fas fa-chevron-down"></i>
-              </div>
-            </div>
-            <div class="chapter-content" id="novel-chapter-1">
-              <div class="chapter-text">
-                <div class="download-notice">
-                  <i class="fas fa-file-pdf"></i>
-                  <h4>Para ler este capítulo, baixe o PDF</h4>
-                  <p>
-                    O conteúdo completo está disponível para download em formato
-                    PDF. Clique no botão de download acima para acessar a
-                    história completa.
-                  </p>
-                  <button class="btn btn-primary" onclick="downloadPDF(1)">
-                    <i class="fas fa-download"></i>
-                    Baixar Capítulo 1
-                  </button>
+        <div class="novel-grid">
+          <!-- Capítulo 1 -->
+          <div class="novel-book-card">
+            <div class="book-cover">
+              <img
+                src="https://images.pexels.com/photos/1029141/pexels-photo-1029141.jpeg?auto=compress&cs=tinysrgb&w=400&h=600&fit=crop"
+                alt="Capítulo 1 - O Príncipe das Trevas"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 1</h3>
+                  <p>O Príncipe das Trevas</p>
+                  <span class="chapter-status available">Disponível</span>
                 </div>
+                <button class="download-book-btn" onclick="downloadPDF(1)">
+                  <i class="fas fa-download"></i>
+                  Baixar PDF
+                </button>
               </div>
             </div>
           </div>
 
-          <div class="novel-chapter">
-            <div
-              class="chapter-header"
-              onclick="toggleNovelChapter('novel-chapter-2')"
-            >
-              <div class="chapter-title">
-                <h3>Capítulo 2: Masuke VS Drakom</h3>
-                <span class="chapter-status">Disponível</span>
-              </div>
-              <div class="chapter-actions">
-                <button
-                  class="download-btn"
-                  onclick="downloadPDF(2)"
-                  title="Baixar PDF"
-                >
-                  <i class="fas fa-download"></i>
-                </button>
-                <i class="fas fa-chevron-down"></i>
-              </div>
-            </div>
-            <div class="chapter-content" id="novel-chapter-2">
-              <div class="chapter-text">
-                <div class="download-notice">
-                  <i class="fas fa-file-pdf"></i>
-                  <h4>Para ler este capítulo, baixe o PDF</h4>
-                  <p>
-                    O conteúdo completo está disponível para download em formato
-                    PDF. Clique no botão de download acima para acessar a
-                    história completa.
-                  </p>
-                  <button class="btn btn-primary" onclick="downloadPDF(2)">
-                    <i class="fas fa-download"></i>
-                    Baixar Capítulo 2
-                  </button>
+          <!-- Capítulo 2 -->
+          <div class="novel-book-card">
+            <div class="book-cover">
+              <img
+                src="public/images/Capitulo2/capi2.jpg"
+                alt="Capítulo 2 - Masuke VS Drakom"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 2</h3>
+                  <p>Masuke VS Drakom</p>
+                  <span class="chapter-status available">Disponível</span>
                 </div>
+                <button class="download-book-btn" onclick="downloadPDF(2)">
+                  <i class="fas fa-download"></i>
+                  Baixar PDF
+                </button>
               </div>
             </div>
           </div>
 
-          <div class="novel-chapter">
-            <div
-              class="chapter-header"
-              onclick="toggleNovelChapter('novel-chapter-3')"
-            >
-              <div class="chapter-title">
-                <h3>Capítulo 3: Invasão em PHENIX</h3>
-                <span class="chapter-status">Disponível</span>
-              </div>
-              <div class="chapter-actions">
-                <button
-                  class="download-btn"
-                  onclick="downloadPDF(3)"
-                  title="Baixar PDF"
-                >
-                  <i class="fas fa-download"></i>
-                </button>
-                <i class="fas fa-chevron-down"></i>
-              </div>
-            </div>
-            <div class="chapter-content" id="novel-chapter-3">
-              <div class="chapter-text">
-                <div class="download-notice">
-                  <i class="fas fa-file-pdf"></i>
-                  <h4>Para ler este capítulo, baixe o PDF</h4>
-                  <p>
-                    O conteúdo completo está disponível para download em formato
-                    PDF. Clique no botão de download acima para acessar a
-                    história completa.
-                  </p>
-                  <button class="btn btn-primary" onclick="downloadPDF(3)">
-                    <i class="fas fa-download"></i>
-                    Baixar Capítulo 3
-                  </button>
+          <!-- Capítulo 3 -->
+          <div class="novel-book-card">
+            <div class="book-cover">
+              <img
+                src="public/images/Capitulo3/capi3.jpg"
+                alt="Capítulo 3 - Invasão em PHENIX"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 3</h3>
+                  <p>Invasão em PHENIX</p>
+                  <span class="chapter-status available">Disponível</span>
                 </div>
+                <button class="download-book-btn" onclick="downloadPDF(3)">
+                  <i class="fas fa-download"></i>
+                  Baixar PDF
+                </button>
               </div>
             </div>
           </div>
 
-          <!-- Novo Capítulo 4 -->
-          <div class="novel-chapter">
-            <div
-              class="chapter-header"
-              onclick="toggleNovelChapter('novel-chapter-4')"
-            >
-              <div class="chapter-title">
-                <h3>Capítulo 4: O Confronto com a Demons</h3>
-                <span class="chapter-status">Disponível</span>
-              </div>
-              <div class="chapter-actions">
-                <button
-                  class="download-btn"
-                  onclick="downloadPDF(4)"
-                  title="Baixar PDF"
-                >
+          <!-- Capítulo 4 -->
+          <div class="novel-book-card">
+            <div class="book-cover">
+              <img
+                src="https://images.pexels.com/photos/1029141/pexels-photo-1029141.jpeg?auto=compress&cs=tinysrgb&w=400&h=600&fit=crop"
+                alt="Capítulo 4 - O Confronto com a Demons"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 4</h3>
+                  <p>O Confronto com a Demons</p>
+                  <span class="chapter-status available">Disponível</span>
+                </div>
+                <button class="download-book-btn" onclick="downloadPDF(4)">
                   <i class="fas fa-download"></i>
+                  Baixar PDF
                 </button>
-                <i class="fas fa-chevron-down"></i>
               </div>
             </div>
-            <div class="chapter-content" id="novel-chapter-4">
-              <div class="chapter-text">
-                <div class="download-notice">
-                  <i class="fas fa-file-pdf"></i>
-                  <h4>Para ler este capítulo, baixe o PDF</h4>
-                  <p>
-                    O conteúdo completo está disponível para download em formato
-                    PDF. Clique no botão de download acima para acessar a
-                    história completa.
-                  </p>
-                  <button class="btn btn-primary" onclick="downloadPDF(4)">
-                    <i class="fas fa-download"></i>
-                    Baixar Capítulo 4
-                  </button>
+          </div>
+
+          <!-- Capítulo 5 -->
+          <div class="novel-book-card">
+            <div class="book-cover">
+              <img
+                src="public/images/Capitulo5/capi5.jpg"
+                alt="Capítulo 5 - O Verdadeiro Poder de Drakom"
+                class="cover-image"
+              />
+              <div class="book-overlay">
+                <div class="book-info">
+                  <h3>Capítulo 5</h3>
+                  <p>O Verdadeiro Poder de Drakom</p>
+                  <span class="chapter-status available">Disponível</span>
                 </div>
+                <button class="download-book-btn" onclick="downloadPDF(5)">
+                  <i class="fas fa-download"></i>
+                  Baixar PDF
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Capítulos 6-15 (Estrutura preparada) -->
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 6</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 7</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 8</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 9</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 10</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 11</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 12</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 13</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 14</h3>
+                <p>Em Breve</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="novel-book-card coming-soon">
+            <div class="book-cover">
+              <div class="coming-soon-book">
+                <i class="fas fa-plus"></i>
+                <h3>Capítulo 15</h3>
+                <p>Em Breve</p>
               </div>
             </div>
           </div>
