--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <div class="novel-book-card">
             <div class="book-cover">
               <img
-                src="https://images.pexels.com/photos/1029141/pexels-photo-1029141.jpeg?auto=compress&cs=tinysrgb&w=400&h=600&fit=crop"
+                src="public/images/capitulo1/capa 1.jpg"
                 alt="Capítulo 1 - O Príncipe das Trevas"
                 class="cover-image"
               />
@@ -279,7 +279,7 @@
           <div class="novel-book-card">
             <div class="book-cover">
               <img
-                src="public/images/Capitulo2/capi2.jpg"
+                src="public/images/Capitulo2/capa 2.jpg"
                 alt="Capítulo 2 - Masuke VS Drakom"
                 class="cover-image"
               />
@@ -323,7 +323,7 @@
           <div class="novel-book-card">
             <div class="book-cover">
               <img
-                src="https://images.pexels.com/photos/1029141/pexels-photo-1029141.jpeg?auto=compress&cs=tinysrgb&w=400&h=600&fit=crop"
+                src="public/images/capa 4.jpg"
                 alt="Capítulo 4 - O Confronto com a Demons"
                 class="cover-image"
               />
