atualização de imagens

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <h3>Capítulo 1</h3>
                   <p>O Renascimento de Masuke</p>
                   <div class="chapter-stats">
-                    <span><i class="fas fa-images"></i> 15 Páginas</span>
+                    <span><i class="fas fa-images"></i> 20 Páginas</span>
                     <span><i class="fas fa-clock"></i> ~12 min</span>
                   </div>
                 </div>
@@ -206,7 +206,7 @@
       <div class="reader-header">
         <div class="reader-info">
           <h3 id="reader-title">Capítulo 1 - O Renascimento de Masuke</h3>
-          <span id="reader-progress">1 / 15</span>
+          <span id="reader-progress">1 / 20</span>
         </div>
         <div class="reader-controls">
           <button class="reader-btn" onclick="toggleFullscreen()">
@@ -323,7 +323,7 @@
           <div class="novel-book-card">
             <div class="book-cover">
               <img
-                src="public/images/capa 4.jpg"
+                src="public/images/Capitulo4/capa 4.jpg"
                 alt="Capítulo 4 - O Confronto com a Demons"
                 class="cover-image"
               />
@@ -572,6 +572,11 @@
                     class="carousel-image active"
                   />
                   <img
+                    src="public/images/Drakom/conceito Drakom.jpg"
+                    alt="Drakom conceito"
+                    class="carousel-image active"
+                  />
+                  <img
                     src="public/images/Drakom/Drakom MDAL.jpeg"
                     alt="Drakom 2"
                     class="carousel-image"
@@ -597,8 +602,12 @@
                     onclick="setCarouselImage('drakom', 0)"
                   ></span>
                   <span
-                    class="indicator"
+                    class="indicator active"
                     onclick="setCarouselImage('drakom', 1)"
+                  ></span>
+                  <span
+                    class="indicator"
+                    onclick="setCarouselImage('drakom', 2)"
                   ></span>
                 </div>
               </div>
